--- a/src/app/pages/results/results.component.html
+++ b/src/app/pages/results/results.component.html
@@ -5,8 +5,10 @@
         Quiz Results for Employee: {{employeeId}}
       </mat-card-subtitle>
       <mat-card-content>
-        Selected answer: {{ selectedAnswers[i].text}}<br>
-        Correct answer: {{ answer.text}}
+        <h2>Score: {{score}}</h2><br>
+
+        <h3>Selected answer: {{ selectedAnswers[x].text}}<br></h3>
+        <h3> Correct answer: {{ answer.text}}</h3>
 
       </mat-card-content>
     </mat-card>
