still wokring on it

--- a/src/app/pages/quiz/quiz.component.html
+++ b/src/app/pages/quiz/quiz.component.html
@@ -2,7 +2,7 @@
     <!-- root mat card -->
     <mat-card fxFlex style="width: 50%; margin: 0 auto; margin-top: 5%;" class="mat-elevation-z8">
         <mat-card-title style="text-align: center; font-weight: lighter;" class="mat-headline">
-                {{ presentationName }}
+            {{ quiz.name }}
         </mat-card-title>
 
         <br />
