--- a/src/app/pages/results/results.component.html
+++ b/src/app/pages/results/results.component.html
@@ -1,4 +1,19 @@
-<mat-card-subtitle style="font-weight: lighter; text-align: center;">
-    Quiz Results for Employee: {{employeeId}}
-  </mat-card-subtitle>
-  
+<div fxLayout="column" fxLayoutGap="10px\" *ngFor="let answer of correctAnswers; let i = index">
+
+  <div *ngIf="selectedAnswers[i].answerId !== answer.answerId">
+
+    <mat-card fxFlex style="width: 50%; margin: 0 auto; margin-top: 5%;" class="mat-elevation-z8">
+      <mat-card-subtitle style="font-weight: lighter; text-align: center;">
+        Quiz Results for Employee: {{employeeId}}
+       </mat-card-subtitle>
+
+      <mat-card-content>
+        Selected answer: {{ selectedAnswers[i].text}}<br>
+        Correct answer: {{ answer.text}}
+      </mat-card-content>
+
+    </mat-card>
+
+  </div>
+
+</div>
